fixing place to be without categories and work
